--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,19 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "database.js",
+  "devDependencies": {},
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
